--- a/index.html
+++ b/index.html
@@ -40,6 +40,19 @@
           <source src="assets/video/gasirim.mp4" type="video/mp4">
           비디오를 재생할 수 없는 환경입니다.
         </video>
+        <div class="intro-video__controls">
+          <button type="button" class="intro-video__toggle" data-video-toggle aria-pressed="false">
+            <span class="intro-video__toggle-icon" aria-hidden="true">
+              <svg class="icon--pause" viewBox="0 0 24 24" focusable="false">
+                <path d="M7 4h3v16H7zM14 4h3v16h-3z" fill="currentColor" />
+              </svg>
+              <svg class="icon--play" viewBox="0 0 24 24" focusable="false">
+                <path d="M8 5v14l10-7z" fill="currentColor" />
+              </svg>
+            </span>
+            <span class="intro-video__toggle-text">일시 정지</span>
+          </button>
+        </div>
       </div>
 
       <div class="article article-container reveal from-left">
